<resources>
    <string name="app_name">CardZap</string>
    <string name="intro_instruction">By continuing to the app you agree to out <b><u>Term and Conditions</u></b>, <b><u>Privacy policy</u></b></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="card_qr">Card QR Business</string>
    <string name="name_card">Isabela Card</string>
    <string name="department_card">Dev mobile Card</string>
    <string name="company_card">Nine Plus Solution</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_link">Enter your link</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="new_card_zap">New CardZap</string>
    <string name="save">Save</string>
    <string name="enter_details">Enter Details:</string>
    <string name="name">Name</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last Name*</string>
    <string name="organization">Organization</string>
    <string name="company">Company</string>
    <string name="department">Department</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="address">Address</string>
    <string name="text">Text</string>
    <string name="card">Card</string>
    <string name="colors">Colors</string>
    <string name="card_name_or_identifier">Card name or identifier</string>
    <string name="card_details">Card Details:</string>
</resources>